.k8s/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: backend-app-<ENVIRONMENT>
  name: <APP_NAME>
  labels:
    name: <APP_NAME>
spec:
  replicas: 1
  selector:
    matchLabels:
      name: <APP_NAME>
  template:
    metadata:
      labels:
        name: <APP_NAME>
    spec:
      nodeSelector:
        doks.digitalocean.com/node-pool: <POOL>
      containers:
        - name: <APP_NAME>
          image: <IMAGE>
          imagePullPolicy: Always
          command: ["python", "app/main.py"]
          resources:
            requests:
              memory: "85Mi"
              cpu: "5m"
            limits:
              cpu: 500m
              memory: 512Mi
          ports:
            - containerPort: 80
          volumeMounts:
            - name: starkbank-private-key
              mountPath: /private-key-volume
              readOnly: true
      volumes:
        - name: starkbank-private-key
          secret:
            secretName: private-key
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: <APP_NAME>
  name: <APP_NAME>
  namespace: backend-app-<ENVIRONMENT>
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: <APP_NAME>
